Creación de formas e implementación de Bootstrap

--- a/templates/base.HTML
+++ b/templates/base.HTML
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'bootstrap/base.html' %}
+
+{% block head %}
+    {{ super() }}
+
     <title>
-        {% block title %} Flask Checho {% endblock %} 
+        {% block title %}Flask Checho |{% endblock %}
     </title>
-</head>
-<body>
-    {% block content %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+{% endblock %}
+
+{% block body %}
+    {% block navbar %}
+        {% include 'navbar.html' %}
     {% endblock %}
-</body>
-</html>
+
+    {% block content %}{% endblock %}
+{% endblock %}
