--- a/templates/hello.HTML
+++ b/templates/hello.HTML
@@ -1,4 +1,5 @@
 {% extends 'base.HTML' %}
+{% import 'macros.HTML' as macros %}
 
 {% block title %}
     {{ super() }}
@@ -14,7 +15,7 @@
 
     <ul>
         {% for todo in todos %}
-        <li>{{todo}}</li>
+        <li>{{macros.render_todo(todo)}}</li>
         {% endfor %}
     </ul>
 {% endblock %}
