--- a/templates/hello.HTML
+++ b/templates/hello.HTML
@@ -1,5 +1,6 @@
 {% extends 'base.HTML' %}
 {% import 'macros.HTML' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %}
     {{ super() }}
@@ -7,11 +8,19 @@
 {% endblock %}
 
 {% block content %}
+    {% if username %}
+        <h1>Welcome, {{username | capitalize }}</h1>
+    {% endif %}
+
     {% if user_ip %}
-        <h1>Hello world with Flask, your IP is {{user_ip}}</h1>
+        <h3>Hello world with Flask, your IP is {{user_ip}}</h3>
     {% else %}
         <a href="{{ url_for('index') }}">Go To Start</a>
     {% endif %}
+
+        {{ wtf.quick_form(login_form) }}
+
+    </div>
 
     <ul>
         {% for todo in todos %}
