Renderización de los formularios

--- a/app/templates/base.HTML
+++ b/app/templates/base.HTML
@@ -4,7 +4,7 @@
     {{ super() }}
 
     <title>
-        {% block title %}Flask Checho |{% endblock %}
+        {% block title %}Flask Platzi |{% endblock %}
     </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
 {% endblock %}
@@ -15,17 +15,16 @@
     {% endblock %}
 
     {% for message in get_flashed_messages() %}
-        <div class="alert alert-success alert-dismissible"> 
-            <button type="button" 
+        <div class="alert alert-success alert-dismissible">
+            <button type="button"
                     data-dismiss="alert"
                     class="close">&times;</button>
-        {{message}}            
-
+            {{ message }}
         </div>
-
     {% endfor %}
+
     {% block content %}{% endblock %}
     {% block scripts %}
         {{ super() }}
-    {% endblock %}    
+    {% endblock %}
 {% endblock %}
